tests/core/data/csl/InterfaceTests/InvalidDeclarations/emptyDeclarationWithComment.csl
/*
	Invalid Interface declaration
 */
interface emptyDeclarationWithComment
{
	// Comments are not member declarations.
};


